--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Utility for downloading Chrome Driver binary for current os/platform",
     "require": {
         "php": ">=5.3.0",
-        "composer-plugin-api": "^1.0",
+        "composer-plugin-api": "^1.0 | ^2.0",
         "vaimo/webdriver-binary-downloader": "^2.1.0"
     },
     "require-dev": {
