--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "vaimo/binary-chromedriver",
+    "name": "bolt/binary-chromedriver",
     "type": "composer-plugin",
     "license": "MIT",
     "description": "Utility for downloading Chrome Driver binary for current os/platform",
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=7.2.9",
         "composer-plugin-api": "^1.0 | ^2.0",
-        "vaimo/webdriver-binary-downloader": "^2.1.0"
+        "bolt/webdriver-binary-downloader": "^2.1.0"
     },
     "require-dev": {
-        "composer/composer": "^1.0.0",
+        "composer/composer": "^1.0 | ^2.0",
         "vaimo/composer-changelogs": "^0.15.4",
         "squizlabs/php_codesniffer": "^2.9.2",
         "phpcompatibility/php-compatibility": "^9.1.1",
@@ -19,7 +19,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.3.9"
+            "php": "7.2.9"
         }
     },
     "replace": {
