--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7.2.9",
         "composer-plugin-api": "^1.0 | ^2.0",
-        "bolt/webdriver-binary-downloader": "^2.1.0"
+        "bolt/webdriver-binary-downloader": "dev-master"
     },
     "require-dev": {
         "composer/composer": "^1.0 | ^2.0",
